modules/gdscript/tests/scripts/analyzer/errors/export_var_no_type_no_initializer.gd
# GH-74188

@export_multiline var text

func test():
	pass
